portage-converter/kits-specs-map.yaml: Add ide.yaml to kits

--- a/portage-converter/kits-specs-map.yaml
+++ b/portage-converter/kits-specs-map.yaml
@@ -82,6 +82,7 @@ extra-pkgs:
         - x11-misc2.yaml
         - desktop2.yaml
         - browsers.yaml
+        - ide.yaml
 
     core-gl-kit:
       specs:
@@ -432,6 +433,7 @@ extra-pkgs:
         - gnome-extra.yaml
         - x11-misc.yaml
         - devtools.yaml
+        - ide.yaml
 
     llvm-kit:
       specs:
