Dockerfile*: Update specs

--- a/Dockerfile.devel
+++ b/Dockerfile.devel
@@ -19,7 +19,7 @@ RUN system/luet-geaaru-thin
 RUN sys-apps/shadow
 RUN sys-apps/sed
 RUN app-shells/bash
-RUN sys-devel-9.2.0/gcc
+RUN gcc
 
 RUN virtual-entities/base
 
