--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -21,7 +21,7 @@ RUN system/luet-geaaru-testing
 RUN sys-apps/shadow
 RUN sys-apps/sed
 RUN app-shells/bash
-RUN sys-devel-9.2.0/gcc
+RUN gcc
 
 RUN virtual-entities/base
 
