--- a/packages/macaroni/poppler/build.yaml
+++ b/packages/macaroni/poppler/build.yaml
@@ -19,7 +19,12 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 includes:
-  {{ .Values.includes }}
+{{ if eq .Values.name "poppler-qt" }}
+- ^/usr/include/poppler/qt5/.*
+- ^/usr/lib64/libpoppler-qt5.so
+- ^/usr/lib64/libpoppler-qt5.so.*
+- ^/usr/lib64/pkgconfig/poppler-qt5.pc
+{{ end }}
 requires:
 # TODO: move this to race with efl to reduce compilation tasks.
 - name: macaroni-funtoo-race14
