--- a/packages/atoms/browsers/www-client/google-chrome/definition.yaml
+++ b/packages/atoms/browsers/www-client/google-chrome/definition.yaml
@@ -1,5 +1,5 @@
 name: google-chrome
-version: 118.0.5993.70
+version: 118.0.5993.70+1
 category: www-client
 use_flags:
 - -selinux
@@ -31,6 +31,9 @@ requires:
 - name: libXtst
   version: '>=0'
   category: x11-libs
+- name: ctl
+  version: '>=0'
+  category: macaroni
 annotations:
   desktop_browser: true
   subsets:
