--- a/packages/atoms/browsers/www-client/google-chrome/finalize.yaml
+++ b/packages/atoms/browsers/www-client/google-chrome/finalize.yaml
@@ -4,3 +4,6 @@ shell:
 install:
 - source /etc/profile && macaronictl env-update && whip hook gtk.mime_update_db &&
   whip hook gtk.glib_update_schemas && whip hook gtk.gtk_update_icons
+- macaronictl browser conf www-client/brave-bin --exec --system --defaults
+uninstall:
+- macaronictl browser conf www-client/brave-bin --exec --system --purge
