www-client/google-chrome-beta: Bump v.119.0.6045.21+1

--- a/packages/atoms/browsers/www-client/google-chrome-beta/definition.yaml
+++ b/packages/atoms/browsers/www-client/google-chrome-beta/definition.yaml
@@ -1,5 +1,5 @@
 name: google-chrome-beta
-version: 119.0.6045.21
+version: 119.0.6045.21+1
 category: www-client
 use_flags:
 - -selinux
@@ -31,6 +31,9 @@ requires:
 - name: libXtst
   version: '>=0'
   category: x11-libs
+- name: ctl
+  version: '>=0'
+  category: macaroni
 annotations:
   desktop_browser: true
   subsets:
