--- a/packages/atoms/browsers/www-client/google-chrome-unstable/definition.yaml
+++ b/packages/atoms/browsers/www-client/google-chrome-unstable/definition.yaml
@@ -1,5 +1,5 @@
 name: google-chrome-unstable
-version: 120.0.6062.2
+version: 120.0.6062.2+1
 category: www-client
 use_flags:
 - -selinux
@@ -31,6 +31,9 @@ requires:
 - name: libXtst
   version: '>=0'
   category: x11-libs
+- name: ctl
+  version: '>=0'
+  category: macaroni
 annotations:
   desktop_browser: true
   subsets:
