www-client/brave-bin: Bump v.1.59.117+1

--- a/packages/atoms/browsers/www-client/brave-bin/definition.yaml
+++ b/packages/atoms/browsers/www-client/brave-bin/definition.yaml
@@ -1,5 +1,5 @@
 name: brave-bin
-version: 1.59.117
+version: 1.59.117+1
 category: www-client
 requires:
 - name: nss
@@ -26,6 +26,9 @@ requires:
 - name: libxshmfence
   version: '>=0'
   category: x11-libs
+- name: ctl
+  version: '>=0'
+  category: macaroni
 annotations:
   desktop_browser: true
   subsets:
