dev-python/ovs: Bump v.3.1.2

--- a/packages/atoms-extra/tools/dev-python/ovs/definition.yaml
+++ b/packages/atoms-extra/tools/dev-python/ovs/definition.yaml
@@ -1,5 +1,5 @@
 name: ovs
-version: 2.17.1
+version: 3.1.2
 category: dev-python
 use_flags:
 - -python_targets_python3_10
@@ -35,4 +35,4 @@ labels:
   kit: python-modules-kit
   original.package.name: dev-python/ovs
   original.package.slot: "0"
-  original.package.version: 2.17.1_p1
+  original.package.version: 3.1.2
