--- a/packages/atoms-extra/tools/dev-python/paramiko/definition.yaml
+++ b/packages/atoms-extra/tools/dev-python/paramiko/definition.yaml
@@ -1,5 +1,5 @@
 name: paramiko
-version: 3.2.0
+version: 3.3.1
 category: dev-python
 use_flags:
 - -python_targets_python2_7
@@ -49,4 +49,4 @@ labels:
   kit: python-modules-kit
   original.package.name: dev-python/paramiko
   original.package.slot: "0"
-  original.package.version: 3.2.0-r1
+  original.package.version: 3.3.1
