--- a/packages/atoms-extra/tools/net-misc/ovn/definition.yaml
+++ b/packages/atoms-extra/tools/net-misc/ovn/definition.yaml
@@ -1,5 +1,5 @@
 name: ovn
-version: 22.09.1+2
+version: 23.06.2
 category: net-misc
 use_flags:
 - -python_targets_python3_10
@@ -44,7 +44,7 @@ labels:
     ( dev-lang/python:3.10 ) >=dev-lang/python-exec-2:=[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
     ssl? ( dev-libs/openssl:0= ) dns? ( net-dns/unbound ) net-misc/openvswitch virtual/tmpfiles
   emerge.packages: net-misc/ovn
-  kit: net-kit
+  kit: geaaru-kit
   original.package.name: net-misc/ovn
   original.package.slot: "0"
-  original.package.version: 22.09.1
+  original.package.version: 23.06.2
