--- a/portage-converter/browsers.yaml
+++ b/portage-converter/browsers.yaml
@@ -232,11 +232,11 @@ artefacts:
         whip hook gtk.glib_update_schemas &&
         whip hook gtk.gtk_update_icons
       - >-
-        macaronictl browser conf www-client/brave-bin --exec
+        HOME=/root macaronictl browser conf {{ .Values.category }}/{{ .Values.name }} --exec
         --system --defaults
     uninstall:
       - >-
-        macaronictl browser conf www-client/brave-bin --exec
+        HOME=/root macaronictl browser conf {{ .Values.category }}/{{ .Values.name }} --exec
         --system --purge
 
   packages:
