--- a/packages/atoms/browsers/www-client/google-chrome-unstable/finalize.yaml
+++ b/packages/atoms/browsers/www-client/google-chrome-unstable/finalize.yaml
@@ -7,5 +7,5 @@ install:
 - HOME=/root macaronictl browser conf {{ .Values.category }}/{{ .Values.name }} --exec
   --system --defaults
 uninstall:
-- HOME=/root macaronictl browser conf {{ .Values.category }}/{{ .Values.name }} --exec
-  --system --purge
+- HOME=/root macaronictl browser conf {{ .Values.category }}/{{ .Values.name }} --system
+  --purge
