www-client/brave-bin: Fix uninstall

--- a/packages/atoms/browsers/www-client/brave-bin/finalize.yaml
+++ b/packages/atoms/browsers/www-client/brave-bin/finalize.yaml
@@ -6,4 +6,4 @@ install:
   whip hook gtk.glib_update_schemas && whip hook gtk.gtk_update_icons
 - HOME=/root macaronictl browser conf www-client/brave-bin --exec --system --defaults
 uninstall:
-- HOME=/root macaronictl browser conf www-client/brave-bin --exec --system --purge
+- HOME=/root macaronictl browser conf www-client/brave-bin --system --purge
