app-crypt/mit-krb5: Add missing rdep libverto

--- a/packages/atoms/base-extra/app-crypt/mit-krb5/definition.yaml
+++ b/packages/atoms/base-extra/app-crypt/mit-krb5/definition.yaml
@@ -24,6 +24,9 @@ requires:
 - name: e2fsprogs
   version: '>=0'
   category: sys-fs
+- name: libverto
+  version: '>=0'
+  category: dev-libs
 annotations:
   subsets:
     rules:
