--- a/portage-converter/base-extra.yaml
+++ b/portage-converter/base-extra.yaml
@@ -473,6 +473,10 @@ artefacts:
       packages:
         - category: dev-libs
           name: libverto
+    runtime_deps:
+      packages:
+        - category: dev-libs
+          name: libverto
   uses:
     disabled:
     - cpu_flags_x86_aes
