iso/funtoo-live-testing.yaml: Enable dev repos

--- a/iso/funtoo-live-testing.yaml
+++ b/iso/funtoo-live-testing.yaml
@@ -199,8 +199,10 @@ packages:
 repository:
   packages:
   - repository/mottainai-testing
-  - repository/macaroni-funtoo-testing
-  - repository/macaroni-commons-testing
+    #  - repository/macaroni-funtoo-testing
+  - repository/macaroni-funtoo-dev
+  #- repository/macaroni-commons-testing
+  - repository/macaroni-commons-dev
 #  - repository/macaroni-security-dev
 
 initramfs:
