iso: Add subset desktop to configs

--- a/iso/conf/luet-desktop-thin.yaml
+++ b/iso/conf/luet-desktop-thin.yaml
@@ -51,6 +51,9 @@ subsets:
     # /usr/include/* files.
     #- devel
 
+    # Enable desktop subset
+    - desktop
+
 finalizer_envs:
   - key: "BUILD_ISO"
     value: "1"
