--- a/iso/conf/luet-devel.yaml
+++ b/iso/conf/luet-devel.yaml
@@ -32,6 +32,10 @@ subsets:
     # /usr/include/* files.
     - devel
 
+    # Enable desktop subset to install
+    # macaroni browser catalog
+    - desktop
+
 finalizer_envs:
   - key: "BUILD_ISO"
     value: "1"
