portage-converter/kits-specs-map.yaml: Add power.yaml

--- a/portage-converter/kits-specs-map.yaml
+++ b/portage-converter/kits-specs-map.yaml
@@ -114,6 +114,7 @@ extra-pkgs:
         - base-multimedia3.yaml
         - tools.yaml
         - firmware.yaml
+        - power.yaml
 
     core-kit:
       specs:
@@ -160,6 +161,7 @@ extra-pkgs:
         - server.yaml
         - desktop2.yaml
         - php.yaml
+        - power.yaml
 
     core-server-kit:
       specs:
@@ -375,6 +377,7 @@ extra-pkgs:
         - base-kde4.yaml
         - emulation2.yaml
         - desktop2.yaml
+        - power.yaml
 
     science-kit:
       specs:
@@ -506,6 +509,7 @@ seeds:
     specs:
       - file: base-gtk2.yml
         dir: base-gtk2
+
       - file: base-editors.yml
         dir: base-editors
 
@@ -706,3 +710,6 @@ seeds:
 
       - file: php.yaml
         dir: php
+
+      - file: power.yaml
+        dir: power
