--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -12,24 +12,37 @@ SHELL ["/usr/bin/luet", "install", "-y", "--force", "--sync-repos"]
 RUN repository/mottainai-stable
 RUN repository/macaroni-commons-testing
 RUN repository/macaroni-phoenix-testing
+RUN [ \
+  "/usr/bin/luet", "install", "-y", "--force", "--sync-repos", \
+  "--cleanup", "--purge-repos", \
+  "repository/mottainai-stable", \
+  "repository/macaroni-commons-testing", \
+  "repository/macaroni-phoenix-testing"]
 
-RUN system/entities
-
-SHELL ["/usr/bin/luet", "install", "-y", "--force"]
-
-RUN system/luet-geaaru-testing
-RUN sys-apps/shadow
-RUN sys-apps/sed
-RUN app-shells/bash
-RUN gcc
-
-RUN virtual-entities/base
+RUN [ \
+  "/usr/bin/luet", "install", "-y", "--force", "--sync-repos", \
+  "--cleanup", "--purge-repos", \
+  "--skip-config-protect", \
+  "system/entities", \
+  "system/luet-geaaru-testing", \
+  "sys-apps/shadow", \
+  "sys-apps/sed", \
+  "app-shells/bash", \
+  "glibc", \
+  "gcc", \
+  "sys-apps/iproute2", \
+  "sysvinit", \
+  "sys-apps/coreutils", \
+  "sys-apps/openrc", \
+  "virtual/base", \
+  "virtual-entities/base", \
+  "app-admin/macaronictl-thin" ]
 
 SHELL ["/bin/bash", "-c"]
 
-RUN luet i -y iproute2 sysvinit coreutils sys-apps/openrc virtual/base macaronictl-thin --skip-config-protect && \
-  macaronictl env-update && \
-  luet cleanup --purge-repos && \
+RUN macaronictl env-update && \
+  luet rm -y --nodeps virtual-entities/base && \
+  luet cleanup --purge-repos &&
   mkdir /tmp
 
 ENV TMPDIR=/tmp
