Dockerfile.test: Add gentoo-functions

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -21,6 +21,7 @@ RUN [ \
   "--skip-config-protect", \
   "system/entities", \
   "system/luet-geaaru-testing", \
+  "sys-apps/gentoo-functions", \
   "sys-apps/shadow", \
   "sys-apps/sed", \
   "app-shells/bash", \
