macaroni/live-setup-gnome: Add eselect-pinentry on requires

--- a/packages/macaroni/live-setup-gnome/definition.yaml
+++ b/packages/macaroni/live-setup-gnome/definition.yaml
@@ -56,3 +56,6 @@ requires:
 - name: macaroni-funtoo-calamares
   version: '>=0'
   category: system
+- name: eselect-pinentry
+  category: app-eselect
+  version: '>=0'
