virtual/opencl: Add ocl-icd in requires

--- a/packages/atoms/base-gnome4/virtual/opencl/definition.yaml
+++ b/packages/atoms/base-gnome4/virtual/opencl/definition.yaml
@@ -10,6 +10,9 @@ requires:
 - name: mesa
   version: '>=0'
   category: media-libs
+- name: ocl-icd
+  version: '>=0'
+  category: dev-libs
 annotations:
   subsets:
     rules:
