net-libs-1.0/dleyna-core: Add net-libs/gupnp on requires

--- a/packages/atoms/base-gnome4/net-libs-1.0/dleyna-core/definition.yaml
+++ b/packages/atoms/base-gnome4/net-libs-1.0/dleyna-core/definition.yaml
@@ -2,9 +2,15 @@ name: dleyna-core
 version: 0.5.0+2
 category: net-libs-1.0
 requires:
+- name: glib
+  version: '>=0'
+  category: dev-libs-2
 - name: gupnp
   version: '>=0'
   category: net-libs-1.2
+- name: gupnp
+  version: '>=0'
+  category: net-libs
 annotations:
   subsets:
     rules:
