net-libs/gupnp: Add net-libs/gssdp on requires

--- a/packages/atoms/base-gnome4/net-libs/gupnp/definition.yaml
+++ b/packages/atoms/base-gnome4/net-libs/gupnp/definition.yaml
@@ -15,6 +15,9 @@ requires:
 - name: gssdp
   version: '>=0'
   category: net-libs-1.2
+- name: gssdp
+  version: '>=0'
+  category: net-libs
 annotations:
   subsets:
     rules:
