--- a/portage-converter/base-gnome4.yaml
+++ b/portage-converter/base-gnome4.yaml
@@ -259,6 +259,10 @@ artefacts:
       packages:
         - category: net-libs
           name: gssdp
+    runtime_deps:
+      packages:
+        - category: net-libs
+          name: gssdp
   uses:
     disabled:
       - debug
@@ -379,6 +383,10 @@ artefacts:
           name: gupnp
         - category: net-libs
           name: gssdp
+    runtime_deps:
+      packages:
+        - category: net-libs
+          name: gupnp
   uses:
     disabled:
       - debug
