macaroni/live-setup-core: Add app-eselect/eselect-lib-bin-symlink on requires

--- a/packages/macaroni/live-setup-core/definition.yaml
+++ b/packages/macaroni/live-setup-core/definition.yaml
@@ -38,3 +38,6 @@ requires:
 - name: portage
   version: '>=0'
   category: sys-apps
+- name: eselect-lib-bin-symlink
+  version: '>=0'
+  category: app-eselect
