seed/macaroni-funtoo-race16: Bump v.0.20231021+1

--- a/packages/seeds/macaroni-funtoo-race16/build.yaml
+++ b/packages/seeds/macaroni-funtoo-race16/build.yaml
@@ -24,6 +24,8 @@ steps:
   chmod a+rwx /tmp
 - luet install virtual-entities/base --force
 - >-
+  luet repo update &&
+  luet upgrade --force &&
   luet install --force
   system/luet-devkit
   utils/jq
