--- a/packages/atoms/db/dev-db-11/postgresql/finalize.yaml
+++ b/packages/atoms/db/dev-db-11/postgresql/finalize.yaml
@@ -4,3 +4,7 @@ shell:
 install:
 - eval 'mkdir -p /var/lib/postgresql || true' && entities merge --specs-dir /usr/share/macaroni/entities/
   -e postgres
+- |
+  if [ ! -e /usr/lib64/libpq.so ] ; then
+  eselect postgresql set {{ ( index .Values.labels "original.package.slot" ) }} ;
+  fi
