iso/*: Update name of macaroni-release/phoenix package

--- a/iso/funtoo-dev.yaml
+++ b/iso/funtoo-dev.yaml
@@ -13,8 +13,9 @@ packages:
   - macaroni/whip-catalog
   - macaroni/skel-phoenix
   - whip-profiles/macaroni
-  - macaroni-release/funtoo
+  - macaroni-release/phoenix
   - system/macaroni-funtoo-calamares
+  - sys-apps/lsb-release
 
   - virtual/sh
   - virtual/base
