--- a/iso/funtoo-gnome-devel.yaml
+++ b/iso/funtoo-gnome-devel.yaml
@@ -11,7 +11,7 @@ packages:
   - whip-profiles/macaroni
   - app-admin/macaronictl-thin
   - macaroni/live-setup-gnome
-  - macaroni-release/funtoo
+  - macaroni-release/phoenix
   - macaroni/whip-catalog
   - macaroni/skel-phoenix
 
