--- a/iso/funtoo-live-testing.yaml
+++ b/iso/funtoo-live-testing.yaml
@@ -12,6 +12,8 @@ packages:
   - macaroni/pageant
   - macaroni-release/phoenix
 
+  - sys-apps/lsb-release
+
   - virtual/sh
   - virtual/base
   - virtual/openrc
