--- a/iso/funtoo-server-devel.yaml
+++ b/iso/funtoo-server-devel.yaml
@@ -7,7 +7,7 @@ packages:
   - utils/yq
   - utils/jq
 
-  - macaroni-release/funtoo
+  - macaroni-release/phoenix
   - macaroni/live-setup-server
   - app-admin/whip
   - whip-profiles/macaroni
