--- a/iso/funtoo.yaml
+++ b/iso/funtoo.yaml
@@ -9,7 +9,7 @@ packages:
 
   - macaroni/live-setup-gnome
   - app-admin/macaronictl-thin
-  - macaroni-release/funtoo
+  - macaroni-release/phoenix
   - macaroni/whip-catalog
   - macaroni/skel-phoenix
   - whip-profiles/macaroni
