--- a/iso/funtoo-xfce.yaml
+++ b/iso/funtoo-xfce.yaml
@@ -11,7 +11,7 @@ packages:
   - app-admin/macaronictl-thin
   - whip-profiles/macaroni
   - macaroni/live-setup-xfce4
-  - macaroni-release/funtoo
+  - macaroni-release/phoenix
   - system/macaroni-funtoo-calamares
   - macaroni/whip-catalog
   - macaroni/skel-phoenix
