seed/funtoo-stage3: Bump v.0.20230710

--- a/packages/seeds/funtoo-stage3/definition.yaml
+++ b/packages/seeds/funtoo-stage3/definition.yaml
@@ -1,7 +1,8 @@
-category: "seed"
-name: "funtoo-stage3"
-version: "0.20220604"
+category: seed
+name: funtoo-stage3
+version: "0.20230710"
 labels:
-  package.version: "2022-06-04"
-  release: "1.4"
+  distfiles.version: "0.20230710"
+  package.version: "2023-07-10"
+  release: next
 hidden: true
