seed/funtoo-kits: Bump v.0.20231102+1

--- a/packages/seeds/funtoo-kits/kits-versions/haskell-kit.yml
+++ b/packages/seeds/funtoo-kits/kits-versions/haskell-kit.yml
@@ -1,3 +1,3 @@
-kit-fixups: ""
+kit-fixups: "41adb4eecac5d41dd52e3d0b2ced4f2f9c174a7a"
 gentoo-staging: "9292583023a6610905c79a4707db3ac6c63b3a31"
-commit: "8e356efe17a89c64da0d4f5978ef85f5c3df572e"
+commit: "c469a106196ff38b15a2d70c331e1e05de976291"
