seed/funtoo-kit-geaaru: Bump v.0.20231103+1

--- a/packages/seeds/funtoo-kit-geaaru/definition.yaml
+++ b/packages/seeds/funtoo-kit-geaaru/definition.yaml
@@ -1,7 +1,7 @@
 category: "seed"
 name: "funtoo-kit-geaaru"
-version: "0.20231103"
+version: "0.20231103+1"
 labels:
   repo: "https://github.com/geaaru/geaaru_overlay.git"
-  repo_hash: "f0af55fa807174c025b24932b38d8d1c8639d741"
+  repo_hash: "e23e2e7916f109746cf9de96f30ecf5012e95d47"
   repo_branch: "funtoo"
