--- a/packages/atoms/base-tools2/dev-libs/libbsd/definition.yaml
+++ b/packages/atoms/base-tools2/dev-libs/libbsd/definition.yaml
@@ -24,4 +24,4 @@ labels:
   kit: core-kit
   original.package.name: dev-libs/libbsd
   original.package.slot: "0"
-  original.package.version: 0.11.7-r1
+  original.package.version: 0.11.7
