--- a/packages/virtual/base/definition.yaml
+++ b/packages/virtual/base/definition.yaml
@@ -1,13 +1,13 @@
 category: "virtual"
 name: "base"
-version: "1+1"
+version: "2"
 description: "Virtual package for setup a base system"
 labels:
-  gcc_version: "9.2.0"
+  gcc_version: "11.3.0"
   gcc_arch: "x86_64"
 requires:
 - name: gcc
-  category: "sys-devel-9.2.0"
+  category: "sys-devel-11.3.0"
   version: ">=0"
 - name: util-linux
   category: "sys-apps"
