net-libs/libtorrent: Bump v.0.13.7+1

--- a/packages/atoms/base-net/net-libs/libtorrent/definition.yaml
+++ b/packages/atoms/base-net/net-libs/libtorrent/definition.yaml
@@ -1,16 +1,16 @@
 name: libtorrent
-version: 0.13.7
+version: 0.13.7+1
 category: net-libs
 use_flags:
 - -libressl
-- -ssl
+- ssl
 requires:
 - name: libsigc++
   version: '>=0'
   category: dev-libs-2
-- name: zlib
+- name: openssl
   version: '>=0'
-  category: sys-libs
+  category: dev-libs
 annotations:
   subsets:
     rules:
