--- a/packages/atoms/base-fs/sys-fs/encfs/definition.yaml
+++ b/packages/atoms/base-fs/sys-fs/encfs/definition.yaml
@@ -13,6 +13,9 @@ requires:
 - name: fuse
   version: '>=0'
   category: sys-fs-3
+- name: fuse
+  version: '>=0'
+  category: sys-fs
 annotations:
   subsets:
     rules:
