--- a/packages/atoms/base-fs/sys-fs/fuse-exfat/definition.yaml
+++ b/packages/atoms/base-fs/sys-fs/fuse-exfat/definition.yaml
@@ -5,6 +5,9 @@ requires:
 - name: fuse
   version: '>=0'
   category: sys-fs-3
+- name: fuse
+  version: '>=0'
+  category: sys-fs
 annotations:
   subsets:
     rules:
