portage-converter/base-fs: Update specs

--- a/portage-converter/base-fs.yml
+++ b/portage-converter/base-fs.yml
@@ -173,6 +173,10 @@ artefacts:
       packages:
         - category: sys-fs
           name: fuse
+    runtime_deps:
+      packages:
+        - category: sys-fs
+          name: fuse
   uses:
     disabled:
       - libressl
