--- a/packages/atoms/tools/sys-process/htop/definition.yaml
+++ b/packages/atoms/tools/sys-process/htop/definition.yaml
@@ -11,6 +11,9 @@ requires:
 - name: libnl
   version: '>=0'
   category: dev-libs-3
+- name: libunwind
+  version: '>=0'
+  category: sys-libs
 annotations:
   subsets:
     rules:
