sys-fs/libostree: Add provides dev-util/ostree

--- a/packages/atoms/emulation2/sys-fs/libostree/definition.yaml
+++ b/packages/atoms/emulation2/sys-fs/libostree/definition.yaml
@@ -43,6 +43,10 @@ requires:
 - name: fuse
   version: '>=0'
   category: sys-fs-3
+provides:
+- name: ostree
+  version: '>=0'
+  category: dev-util
 annotations:
   subsets:
     rules:
