sys-fs/libostree: Fix version of the provide

--- a/packages/atoms/emulation2/sys-fs/libostree/definition.yaml
+++ b/packages/atoms/emulation2/sys-fs/libostree/definition.yaml
@@ -45,7 +45,7 @@ requires:
   category: sys-fs-3
 provides:
 - name: ostree
-  version: '>=0'
+  version: '2023.6'
   category: dev-util
 annotations:
   subsets:
