toolchain/python-extra: Update rdeps

--- a/packages/toolchain/python-extra/definition.yaml
+++ b/packages/toolchain/python-extra/definition.yaml
@@ -57,6 +57,9 @@ requires:
   - name: bleach
     category: dev-python
     version: '>=0'
+  - name: blinker
+    category: dev-python
+    version: '>=0'
   - name: brotlipy
     category: dev-python
     version: '>=0'
@@ -162,6 +165,9 @@ requires:
   - name: jeepney
     category: dev-python
     version: '>=0'
+  - name: jsonpatch
+    category: dev-python
+    version: '>=0'
   - name: jsonpointer
     category: dev-python
     version: '>=0'
@@ -211,6 +217,9 @@ requires:
     category: dev-python
     version: '>=0'
   - name: oauth2client
+    category: dev-python
+    version: '>=0'
+  - name: oauthlib
     category: dev-python
     version: '>=0'
   - name: olefile
@@ -268,6 +277,12 @@ requires:
     category: dev-python
     version: '>=0'
   - name: pycurl
+    category: dev-python
+    version: '>=0'
+  - name: pyjwt
+    category: dev-python
+    version: '>=0'
+  - name: pyjwt-compat
     category: dev-python
     version: '>=0'
   - name: pykerberos
