python-extra: Drop dev-python/pyjwt-compat added for typo

--- a/portage-converter/python-extra.yaml
+++ b/portage-converter/python-extra.yaml
@@ -297,6 +297,10 @@ artefacts:
     - dev-python/cssutils
     - dev-python/pypeg2
     - dev-python/PyQtWebEngine
+    - dev-python/pyjwt
+    - dev-python/oauthlib
+    - dev-python/jsonpatch
+    - dev-python/blinker
 
 include_layers:
 - layers/macaroni-funtoo-race16.yaml
