toolchain/python-extra: Update rdeps

--- a/packages/toolchain/python-extra/definition.yaml
+++ b/packages/toolchain/python-extra/definition.yaml
@@ -324,6 +324,9 @@ requires:
   - name: reportlab
     category: dev-python
     version: '>=0'
+  - name: requests-toolbelt
+    category: dev-python
+    version: '>=0'
   - name: resolvelib
     category: dev-python
     version: '>=0'
@@ -422,6 +425,9 @@ requires:
     version: '>=0'
   - name: yarl
     category: dev-python
+    version: '>=0'
+  - name: python-gitlab
+    category: dev-vcs
     version: '>=0'
   - name: qhull
     category: media-libs
