portage-converter/python-extra: Add python-gitlab

--- a/portage-converter/python-extra.yaml
+++ b/portage-converter/python-extra.yaml
@@ -301,6 +301,7 @@ artefacts:
     - dev-python/oauthlib
     - dev-python/jsonpatch
     - dev-python/blinker
+    - dev-vcs/python-gitlab
 
 include_layers:
 - layers/macaroni-funtoo-race16.yaml
