toolchain/emulation2: Update rdeps

--- a/packages/toolchain/emulation2/definition.yaml
+++ b/packages/toolchain/emulation2/definition.yaml
@@ -3,6 +3,9 @@ name: emulation2
 version: "1"
 description: "Virtual package to install portage meta data of the emulation2 packages"
 requires:
+  - name: cloud-init
+    category: app-admin
+    version: '>=0'
   - name: cri-o
     category: app-emulation
     version: '>=0'
