portage-converter/base-net: Fix libtorrent use flags

--- a/portage-converter/base-net.yml
+++ b/portage-converter/base-net.yml
@@ -890,11 +890,13 @@ artefacts:
     enabled:
       - daemon
       - xmlrpc
+      - ssl
     disabled:
       - test
       - selinux
       - debug
   packages:
+    - net-libs/libtorrent
     - net-p2p/rtorrent
 
 - tree: packages/atoms/base-net
